...
              SizedBox(
                width: 50 * 1.4,
                height: 40 * 1.4,
                child: FittedBox(
                  fit: BoxFit.fill,
                  child: Switch(
                    key: const Key("virtual_meeting_switch"),
                    value: virtualMeeting,
                    onChanged: (value) {
                      if (value) {
                        MyModal.show(
                          context: context,
                          child: SelectVirtual(
...
